# simple-llm-router

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml  router.py  test_router.py
